0030554: Coding - ChFiDS_CommonPoint uninitialized member traarc

Added missing initialization to ChFiDS_CommonPoint constructor.