src/ChFiDS/ChFiDS_CommonPoint.hxx
@@ -55,8 +55,12 @@ public:
   //! Sets the values of a point which is a vertex on
   //! the initial facet of restriction of one
   //! of the surface.
-    void SetVertex (const TopoDS_Vertex& V);
-  
+  void SetVertex (const TopoDS_Vertex& theVertex)
+  {
+    isvtx = Standard_True;
+    vtx = theVertex;
+  }
+
   //! Sets the values of a point which is on the arc
   //! A, at parameter Param.
   Standard_EXPORT void SetArc (const Standard_Real Tol, const TopoDS_Edge& A, const Standard_Real Param, const TopAbs_Orientation TArc);
@@ -66,30 +70,44 @@ public:
   
   //! Set the 3d point for a commonpoint that is not
   //! a vertex or on an arc.
-    void SetPoint (const gp_Pnt& Point);
+  void SetPoint (const gp_Pnt& thePoint) { point = thePoint; }
   
   //! Set the output 3d  vector
-    void SetVector (const gp_Vec& Vector);
+  void SetVector (const gp_Vec& theVector)
+  {
+    hasvector = Standard_True;
+    vector = theVector;
+  }
   
   //! This method set the fuzziness on the point.
-    void SetTolerance (const Standard_Real Tol);
+  void SetTolerance (const Standard_Real Tol)
+  {
+    if (Tol > tol)
+    {
+      tol = Tol;
+    }
+  }
   
   //! This method returns the fuzziness on the point.
-    Standard_Real Tolerance() const;
+  Standard_Real Tolerance() const { return tol; }
   
   //! Returns TRUE if the point is a vertex on the initial
   //! restriction facet of the surface.
-    Standard_Boolean IsVertex() const;
+  Standard_Boolean IsVertex() const { return isvtx; }
   
   //! Returns the information about the point when it is
   //! on the domain of the first patch, i-e when the function
   //! IsVertex returns True.
   //! Otherwise, an exception is raised.
-    const TopoDS_Vertex& Vertex() const;
-  
+  const TopoDS_Vertex& Vertex() const
+  {
+    if (!isvtx) { throw Standard_DomainError(); }
+    return vtx;
+  }
+
   //! Returns TRUE if the point is a on an edge of the initial
   //! restriction facet of the surface.
-    Standard_Boolean IsOnArc() const;
+  Standard_Boolean IsOnArc() const { return isonarc; }
   
   //! Returns the arc of restriction containing the
   //! vertex.
@@ -107,26 +125,19 @@ public:
   Standard_EXPORT Standard_Real Parameter() const;
   
   //! Returns the 3d point
-    const gp_Pnt& Point() const;
+  const gp_Pnt& Point() const { return point; }
   
   //! Returns TRUE if the output vector is  stored.
-    Standard_Boolean HasVector() const;
+  Standard_Boolean HasVector() const { return hasvector; }
   
   //! Returns the output  3d vector
-    const gp_Vec& Vector() const;
-
-
-
-
-protected:
-
-
-
-
+  const gp_Vec& Vector() const
+  {
+    if (!hasvector) { throw Standard_DomainError ("ChFiDS_CommonPoint::Vector"); }
+    return vector;
+  }
 
 private:
-
-
 
   TopoDS_Edge arc;
   TopoDS_Vertex vtx;
@@ -135,19 +146,11 @@ private:
   Standard_Real tol;
   Standard_Real prmarc;
   Standard_Real prmtg;
-  Standard_Boolean isonarc;
   TopAbs_Orientation traarc;
+  Standard_Boolean isonarc;
   Standard_Boolean isvtx;
   Standard_Boolean hasvector;
 
-
 };
-
-
-#include <ChFiDS_CommonPoint.lxx>
-
-
-
-
 
 #endif // _ChFiDS_CommonPoint_HeaderFile
